--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.2</version>
+        <version>0.8.8</version>
         <executions>
           <execution>
             <id>prepare-agent</id>
@@ -33,7 +33,7 @@
           </execution>
           <execution>
             <id>report</id>
-            <phase>test</phase>
+            <phase>verify</phase>
             <goals>
               <goal>report</goal>
             </goals>
