--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,7 +43,8 @@ stages:
               jdkArchitectureOption: 'x64'
               publishJUnitResults: true
               testResultsFiles: '**/surefire-reports/TEST-*.xml'
-              goals: 'clean package'
+              # goals: 'clean package'
+              goals: 'clean verify'
 
   - stage: Deploy
     displayName: 'Deploy Stage'
